# alchimiabot-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4252c27a3224_mode_aware_tracking.py  5496843aadd5_audit_tables.py  5fd4bf08acfe_entry_quality_diagnostics.py  8245ff6c4af2_config_snapshot.py  91f1d5074475_initial_schema.py  a1f2c3d4e5b6_strategy_attribution.py  a90c97d693c0_add_diagnostic_trace_to_signal_.py  b2e3d4f5a6c7_outbox_event_id.py  ba6c7600bba1_trade_snapshots_and_verdicts.py  c1f8a2e5d9b4_change_markers.py  d5e1a7c4f2b9_user_id_multi_tenant.py  e7f3b8d2a1c5_user_id_remaining_tables.py  f8c2d9a4b5e6_drop_unused_ml_tables.py  fae64499ead3_decision_stages.py
config/: settings.py
docs/: ALCHIMIABOT_MULTITENANT_MASTER.html  ALCHIMIABOT_MULTITENANT_MASTER.md  CHANGE_MARKERS_GUIDE.md  MULTITENANT_ARCHITECTURE.md  MULTITENANT_DATA_STRATEGY.md  PLATFORM_GUIDE.md  dataset_convention_v1.md  label_definitions_v1.md
scripts/: start_capture.sh  stop_capture.sh
src/audit/: base.py  daily_report.py  runner.py
src/backtest/: backtest_runner.py
src/core/: runner.py
src/dashboard/: api.py  server.py
src/experiments/: tracker.py
src/features/: base.py  contract.py  snapshot_service.py  store.py
src/ingestion/: event_bus.py  events.py
src/quant/: executive_summary.py
src/regime/: detector.py  evaluator.py
src/replay/: full_replay.py  replay_engine.py
src/research/: operational_reports.py  queries.py  report.py
tests/unit/: test_bot_receiver_idempotency.py  (+1 more)
(+48 files in other folders)
