[project]
name = "agentbot-platform"
version = "0.1.0"
description = "Quantitative trading platform — research, replay, ML, live execution"
requires-python = ">=3.11"
dependencies = [
    # Core
    "asyncio-mqtt>=0.16",
    "websockets>=12.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    # Storage
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    # Data / Features
    "pandas>=2.2",
    "numpy>=1.26",
    "polars>=0.20",
    # ML
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    # Observability
    "structlog>=24.1",
    "prometheus-client>=0.20",
    # Dashboard
    "fastapi>=0.110",
    "uvicorn>=0.27",
    # Research
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Utils
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
